--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -28,6 +28,7 @@
 <div class="col-8 m-auto pt-4 pb-3 text-center">
     <p class="h1">PESQUISA</p>
 </div>
+
 <!--Formulário de pesquisa-->
 <div class="container">
     <div class="col-sm-12">
@@ -74,65 +75,68 @@
             <a  href="/pesquisa/search/" type="submit" class="btn btn-success ml-3" value="Pesquisar">Pesquisar</a>
             <a href="/pesquisa/searchall/" type="submit" class="btn btn-primary ml-3">Mostrar tudo</a>
 
-            <div class="col-10 m-auto pt-3 pb-2 text-center">
-                <p class="h2 pb-2 pt-2">Resultados</p>
-            </div>
 
-            <table class="table">
-                <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Número de atestado</th>
-                    <th scope="col">Cliente</th>
-                    <th scope="col">Data de emissão</th>
-                    <th scope="col">Tipo de serviço</th>
-                    <th scope="col">Empresa</th>
-                    <th scope="col">Arquivo</th>
-                    <th scope="col">Ações</th>
-                </tr>
-                </thead>
-                <tbody>
-                {%if db%}
-                {%for linhas in db%}
-                <tr>
-                    <th scope="row">{{linhas.numero_documento}}</th>
-                    <td>{{linhas.cliente.nome}}</td>
-                    <td>{{linhas.data_emissao}}</td>
-                    <td>{{linhas.tipo_de_servico}}</td>
-                    <td>{{linhas.empresa.nome}}</td>
-                    <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
-                    <td>
-                        <a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar campo</a>
-                    </td>
-                </tr>
-                {%empty%}
-                <tr>
-                    <th scope="row">
-                    <td>Não contém nenhum registro</td>
-                    </th>
-                </tr>
-                {%endfor%}
-                {%else%}
-                {%for linhas in atestados%}
-                <tr>
-                    <th scope="row">{{linhas.numero_documento}}</th>
-                    <td>{{linhas.cliente.nome}}</td>
-                    <td>{{linhas.data_emissao}}</td>
-                    <td>{{linhas.tipo_de_servico}}</td>
-                    <td>{{linhas.empresa.nome}}</td>
-                    <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
-                    <td><a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar campo</a></td>
-                </tr>
-                {%empty%}
-                <tr>
-                    <th scope="row">
-                    <td>Não contém nenhum registro</td>
-                    </th>
-                </tr>
-                {%endfor%}
-                {%endif%}
-                </tbody>
-            </table>
         </form>
+    </div>
+    <div class="container-fluid">
+        <div class="col-10 m-auto pt-3 pb-2 text-center">
+            <p class="h2 pb-2 pt-2">Resultados</p>
+        </div>
+
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">Número de atestado</th>
+                <th scope="col">Cliente</th>
+                <th scope="col">Data de emissão</th>
+                <th scope="col">Tipo de serviço</th>
+                <th scope="col">Empresa</th>
+                <th scope="col">Arquivo</th>
+                <th scope="col">Ações</th>
+            </tr>
+            </thead>
+            <tbody>
+            {%if db%}
+            {%for linhas in db%}
+            <tr>
+                <th scope="row">{{linhas.numero_documento}}</th>
+                <td>{{linhas.cliente.nome}}</td>
+                <td>{{linhas.data_emissao}}</td>
+                <td>{{linhas.tipo_de_servico}}</td>
+                <td>{{linhas.empresa.nome}}</td>
+                <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
+                <td>
+                    <a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar campo</a>
+                </td>
+            </tr>
+            {%empty%}
+            <tr>
+                <th scope="row">
+                <td>Não contém nenhum registro</td>
+                </th>
+            </tr>
+            {%endfor%}
+            {%else%}
+            {%for linhas in atestados%}
+            <tr>
+                <th scope="row">{{linhas.numero_documento}}</th>
+                <td>{{linhas.cliente.nome}}</td>
+                <td>{{linhas.data_emissao}}</td>
+                <td>{{linhas.tipo_de_servico}}</td>
+                <td>{{linhas.empresa.nome}}</td>
+                <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
+                <td><a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar campo</a></td>
+            </tr>
+            {%empty%}
+            <tr>
+                <th scope="row">
+                <td>Não contém nenhum registro</td>
+                </th>
+            </tr>
+            {%endfor%}
+            {%endif%}
+            </tbody>
+        </table>
     </div>
 </div>
 {%load static%}
