--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -32,31 +32,39 @@
 <!--Formulário de pesquisa-->
 <div class="container">
     <div class="col-sm-12">
-        <form name="formpesquisa" id="formpesquisa" method="POST" action="/search/">
+        <form name="formpesquisa" id="formpesquisa" method="GET" action="/pesquisa/">
             {%csrf_token%}
             <div class="row">
                 <div class="form-group col-4">
                     <label>Número de identificação: </label>
-                    {%if form%}{{form.numero_documento}}{%endif%}
+                    <input type="text" name="busca_numero" id="busca_numero">
                 </div>
                 <div class="form-group col-4">
                     <label>Cliente: </label>
-                    {%if form%}{{form.cliente}}{%endif%}
+                    <select name="busca_cliente" id="busca_cliente" class="form-control">
+                        <option value="1">Banco do Brasil</option>
+                        <option value="2">ANA</option>
+                        <option value="3">Caixa</option>
+                    </select>
                 </div>
                 <div class="form-group col-4">
                     <label>Tipo de serviço: </label>
-                    {%if form%}{{form.tipo_de_servico}}{%endif%}
+                    <input type="text" name="busca_servico" id="busca_servico">
                 </div>
                 <div class="form-group col-4">
-                    <label>Data: </label>
-                    {%if form%}{{form.data_emissao}}{%endif%}
+                    <label>Data inicial: </label>
+                    <input type="text" name="busca_data_emissao" id="busca_data">
                 </div>
                 <div class="form-group col-4">
-                    <label>Selecione a empresa</label>
-                    {%if form%}{{form.empresa}}{%endif%}
+                    <label>Empresa</label>
+                    <select name="busca_empresa" id="busca_empresa" class="form-control">
+                        <option value="1">Qintess</option>
+                        <option value="2">Resource IT</option>
+                        <option value="3">Cimcorp</option>
+                    </select>
                 </div>
             </div>
-            <a href="/pesquisa/search/" type="submit" class="btn btn-success ml-3">Pesquisar</a>
+            <input type="submit" class="btn btn-success ml-3" name="submit" value="Pesquisar"></input>
             <a href="/pesquisa/searchall/" type="submit" class="btn btn-primary">Mostrar tudo</a>
         </form>
     </div>
@@ -82,10 +90,10 @@
             {%for linhas in db%}
             <tr>
                 <th scope="row">{{linhas.numero_documento}}</th>
-                <td>{{linhas.cliente.nome}}</td>
+                <td>{{linhas.cliente}}</td>
                 <td>{{linhas.data_emissao}}</td>
                 <td>{{linhas.tipo_de_servico}}</td>
-                <td>{{linhas.empresa.nome}}</td>
+                <td>{{linhas.empresa}}</td>
                 <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
                 <td>
                     <a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar campo</a>
@@ -95,42 +103,6 @@
             <tr>
                 <th scope="row">
                 <td>Não contém nenhum registro</td>
-                </th>
-            </tr>
-            {%endfor%}
-            {% elif atestados%}
-            {%for linhas in atestados%}
-            <tr>
-                <th scope="row">{{linhas.numero_documento}}</th>
-                <td>{{linhas.cliente.nome}}</td>
-                <td>{{linhas.data_emissao}}</td>
-                <td>{{linhas.tipo_de_servico}}</td>
-                <td>{{linhas.empresa.nome}}</td>
-                <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
-                <td><a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar campo</a></td>
-            </tr>
-            {%empty%}
-            <tr>
-                <th scope="row">
-                <td>Não contém nenhum registro</td>
-                </th>
-            </tr>
-            {%endfor%}
-            {%else%}
-            {%for linhas in dados%}
-            <tr>
-                <th scope="row">{{linhas.numero_documento}}</th>
-                <td>{{linhas.cliente.nome}}</td>
-                <td>{{linhas.data_emissao}}</td>
-                <td>{{linhas.tipo_de_servico}}</td>
-                <td>{{linhas.empresa.nome}}</td>
-                <td><a href="{{linhas.documento_pdf.url}}" class="btn btn-primary btn-sm" target="_blank">Download PDF</a></td>
-                <td><a href="/pesquisa/view/{{linhas.id}}/" class="btn btn-link">Visualizar campo</a></td>
-            </tr>
-            {%empty%}
-            <tr>
-                <th scope="row">
-                    <td>Não contém nenhum registro</td>
                 </th>
             </tr>
             {%endfor%}
