--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -42,9 +42,10 @@
                 <div class="form-group col-4">
                     <label>Cliente: </label>
                     <select name="busca_cliente" id="busca_cliente" class="form-control">
+                        <option>---</option>
                         <option value="1">Banco do Brasil</option>
-                        <option value="2">ANA</option>
-                        <option value="3">Caixa</option>
+                        <option value="2">ANA - Agência Nacional de Águas</option>
+                        <option value="3">Caixa Econômica Federal</option>
                     </select>
                 </div>
                 <div class="form-group col-4">
@@ -58,6 +59,7 @@
                 <div class="form-group col-4">
                     <label>Empresa</label>
                     <select name="busca_empresa" id="busca_empresa" class="form-control">
+                        <option>---</option>
                         <option value="1">Qintess</option>
                         <option value="2">Resource IT</option>
                         <option value="3">Cimcorp</option>
