--- a/app/templates/atestado_form.html
+++ b/app/templates/atestado_form.html
@@ -23,6 +23,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/pesquisa">Pesquisar <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="btn btn-danger" href="/sair">Sair <span class="sr-only">(current)</span></a>
+            </li>
         </ul>
     </div>
 </nav>
