--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
                 <a class="nav-link diabled" href="/pesquisa">Pesquisar <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="btn btn-danger" href="/sair">Sair <span class="sr-only">(current)</span></a>
+            </li>
         </ul>
     </div>
 </nav>
