--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -22,6 +22,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/pesquisa">Pesquisar <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="btn btn-danger" href="/sair">Sair <span class="sr-only">(current)</span></a>
+            </li>
         </ul>
     </div>
 </nav>
