--- a/app/templates/atestado_form.html
+++ b/app/templates/atestado_form.html
@@ -43,7 +43,16 @@
         {{ form|crispy }}
         <div class="text-center">
             <input type="submit" class="btn btn-success">
-        </div>
+        </div><br>
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                <div class="alert alert-danger text-center">{{ message }}</div>
+            {% else %}
+                <div class="alert alert-success text-center">{{ message }}</div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
     </form>
 </div>
 {% load static %}
