--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,22 +11,7 @@
 
 <body>
 <!--Barra de navegação-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Entrega de Atestados</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/form">Cadastrar <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link diabled" href="/pesquisa">Pesquisar <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="btn btn-danger" href="/sair">Sair <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-    </div>
-</nav>
+{%include "model-nav.html" %}
 
 <div class="col-8 m-auto pt-2 pb-2 text-center">
     <h1>Atestados</h1>
