--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -12,22 +12,7 @@
 <body>
 
 <!--Barra de navegação-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Entrega de Atestados</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/form">Cadastrar <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/pesquisa">Pesquisar <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="btn btn-danger" href="/sair">Sair <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-    </div>
-</nav>
+{%incluse "model-nav.html"%}
 
 <!--Título-->
 <div class="col-8 m-auto pt-3 pb-2 text-center">
