--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -12,7 +12,7 @@
 <body>
 
 <!--Barra de navegação-->
-{%incluse "model-nav.html"%}
+{%include "model-nav.html"%}
 
 <!--Título-->
 <div class="col-8 m-auto pt-3 pb-2 text-center">
