--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -62,6 +62,16 @@
             <a href="/pesquisa/searchall/" type="submit" class="btn btn-primary">Mostrar tudo</a>
         </form>
     </div>
+    <br>
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                <div class="alert alert-danger text-center">{{ message }}</div>
+            {% else %}
+                <div class="alert alert-success text-center">{{ message }}</div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
     <div class="container-fluid">
         <div class="col-10 m-auto pt-3 pb-2 text-center">
             <p class="h2 pb-2 pt-2">Resultados</p>
