--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -55,11 +55,10 @@
             </div>
             {%if db%}
                 <a href="/pesquisa/" class="btn btn-primary">Voltar</a>
-                <a href="/edit/{{db.id}}" class="btn btn-warning">Editar</a>
-                <a href="/delete/{{db.id}}" class="btn btn-danger btnDel">Excluir</a>
-            {%else%}
-                <a href="/pesquisa/" class="btn btn-primary">Voltar</a>
-                <a href="/update/{{dados.id}}" type="submit" class="btn btn-success">Salvar</a>
+                {%if db.user == request.user%}
+                    <a href="/edit/{{db.id}}" class="btn btn-warning">Editar</a>
+                    <a href="/delete/{{db.id}}" class="btn btn-danger btnDel">Excluir</a>
+                {%endif%}
             {%endif%}
         </form>
     </div>
