Teste de função de pesquisa de palavras dentro de atestados

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -49,8 +49,8 @@
             </div>
             <div class="form-group row">
                 <label for="empresaestatico" class="col-sm-3 col-form-label">Empresa: </label>
-                <div class="col-sm-6">
-                    <input type="text" readonly class="form-control-plaintext border" id="empresaestatico" value="{{db.empresa.nome}}">
+                <div class="col-sm-6 border">
+                    <input type="text" readonly class="form-control-plaintext" id="empresaestatico" value="{{db.empresa.nome}}">
                 </div>
             </div>
             {%if db%}
