--- a/app/templates/model-nav.html
+++ b/app/templates/model-nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark" id="menu-nav">
-    <a class="navbar-brand" href="">Entrega de Atestados</a>
+    <a class="navbar-brand" href="/">Entrega de Atestados</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
