--- a/app/templates/pesquisa.html
+++ b/app/templates/pesquisa.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pesquisa</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    {%load static%}
+    <link rel="stylesheet" href="{%static 'css/css-page.css'%}">
 </head>
 <body>
 
@@ -114,7 +116,6 @@
         </table>
     </div>
 </div>
-{%load static%}
 <script src="{%static 'javascript.js'%}"></script>
 </body>
 </html>
