--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Atestados</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    {%load static%}
+    <link rel="stylesheet" href="{%static 'css/css-page.css'%}">
 </head>
 
 <body>
@@ -20,7 +22,7 @@
 </div>
 
 <!--Container do formulário de visualização-->
- <div class="container">
+<div class="container">
     <div class="col-12 m-auto pt-2 pb-2">
         <form name="form" id="form" action="/view/{{db.id}}" method="post">
             <div class="form-group row">
@@ -54,11 +56,11 @@
                 </div>
             </div>
             {%if db%}
-                <a href="/pesquisa/" class="btn btn-primary">Voltar</a>
-                {%if db.created_by == request.user%}
-                    <a href="/edit/{{db.id}}" class="btn btn-warning">Editar</a>
-                    <a href="/delete/{{db.id}}" class="btn btn-danger btnDel">Excluir</a>
-                {%endif%}
+            <a href="/pesquisa/" class="btn btn-primary">Voltar</a>
+            {%if db.created_by == request.user%}
+            <a href="/edit/{{db.id}}" class="btn btn-warning">Editar</a>
+            <a href="/delete/{{db.id}}" class="btn btn-danger btnDel">Excluir</a>
+            {%endif%}
             {%endif%}
         </form>
     </div>
