--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -28,7 +28,7 @@
             <input type="text" class="form-control" id="cpf" name="cpf" placeholder="Insira seu CPF">
         </div>
         <div class="form-group">
-            <label for="senha">Password</label>
+            <label for="senha">Senha</label>
             <input type="password" class="form-control" id="senha" name="senha" placeholder="Insira sua senha">
         </div>
         <button type="submit" class="btn btn-primary">Entrar</button>
